# dropnote-contracts

./: .gitignore  Cargo.toml  README.md  build.sh
src/: contract.rs  error.rs  interface.rs  lib.rs  msg.rs  query.rs  state.rs
